tests/ui/masterror/fail/missing_code.stderr
error: missing `code = ...` in #[masterror(...)]
 --> tests/ui/masterror/fail/missing_code.rs:9:1
  |
9 | #[masterror(category = AppErrorKind::Internal)]
  | ^

warning: unused import: `AppErrorKind`
 --> tests/ui/masterror/fail/missing_code.rs:5:17
  |
5 | use masterror::{AppErrorKind, Masterror};
  |                 ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
